--- a/med-cabinet/src/App.css
+++ b/med-cabinet/src/App.css
@@ -18,12 +18,14 @@
   }
 }
 html{
+min-height: 100vh;
 background-image:url('https://medcabinet4.netlify.app/images/bg.jpg');
 background-repeat: no-repeat;
 background-size: cover;
 }
 .chilled{
   background-color:darkgreen;
+  padding-top: 40px;
   text-align:center;
 }
 .Danger{
