styles from login form applied to sign up form within SignUp.js as well

--- a/med-cabinet/src/App.css
+++ b/med-cabinet/src/App.css
@@ -26,6 +26,7 @@ background-size: cover;
 .chilled{
   background-color:darkgreen;
   padding-top: 40px;
+  padding-bottom: 40px;
   text-align:center;
 }
 .Danger{
